cluster/kubernetes/core/kube-system/cilium/app/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  hostnames: ['cni.stevewm.dev']
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
